fix: fix sidebar links overlapping in smaller screens

--- a/base.css
+++ b/base.css
@@ -2008,7 +2008,7 @@ body > section > div.main.container > div > nav > div.profile-details > div.drop
     text-decoration: none;
     color: var(--white);
     transition: .3s ease all;
-    padding: .2em .5em;
+    padding: .2em .7em;
 }
 
 
